# confluent-fun

./: .example.env  .gitignore  Cargo.toml  Makefile  README.md
migrations/2022-11-23-160326_create_users/: up.sql
proto/: users.proto
src/: config.rs  db.rs  kafka.rs  main.rs  models.rs  schema.rs  server.rs  utils.rs
src/events/: create_user.rs  delete_user.rs  mod.rs  producer.rs  update_user.rs
src/user/: create.rs  delete.rs  mod.rs  read.rs  service.rs  traits.rs  update.rs  utils.rs
tf/: main.tf  versions.tf
