[package]
name = "eda-fun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.51.0"
aws-sdk-rds = "0.21.0"
dotenv = "0.15.0"
env_logger = "0.9.3"
log = "0.4.17"
rdkafka = "0.29.0"
tonic = "0.8.2"
